Fix float scroll sliders right padding and scrollbar init

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -929,10 +929,10 @@ a {
 .scrolling-container-wrap {
   position: absolute;
   width: 100%;
-  padding-right: 50px;
+  // padding-right: 50px;
 }
 .scrolling-container {
-  padding-right: 50px;
+  // padding-right: 50px;
 
   padding-bottom: 50px;
 
@@ -950,7 +950,7 @@ a {
     border-radius: 12px;
 
     left: 0;
-    width: 100%;
+    width: 85%;
   }
   .swiper-scrollbar-drag {
     background: #128ad6;
@@ -990,7 +990,7 @@ a {
     border-radius: 12px;
 
     left: 0;
-    width: 100%;
+    width: 85%;
   }
   .swiper-scrollbar-drag {
     background: #128ad6;
